[M-11] AWS S3, product photo upload
[M-11] Merge from newest branch